--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 install:
 - pip install coveralls
 - pip install -r dev-requirements.txt
+- pip install -r requirements.txt
 before_script:
 - flake8 .
 script: py.test --cov=kalon
