--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==0.10.1
 Flask-restful==0.3.3
 flask-mongoengine==0.7.1
 mongoengine==0.10.6
+pymongo==2.9.1
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Cors==2.0.0
